Fixed very small viewing windows to be more readable.

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -223,6 +223,11 @@
         text-align: left;
     }
 
+    .icon-container {
+        display: flex;
+        gap: 1rem;
+    }
+
     .icon {
         display: flex;
         justify-content: center;
